--- a/index.html
+++ b/index.html
@@ -26,12 +26,9 @@
     <li><a href="/contribute">Contribute</a></li>
   </ul>
   <h1 id="title">a11y stands for accessibility</h1>
-  <img 
-    src="/public/11-characters.svg" 
-    alt="The phrase '11 characters'. Arrows are pointing to the first letter c and the letter t in the word 'accessibility' to show how the numeronym is formed."
-  >
-  <p>The A11Y Project is a community-driven effort to make digital accessibility easier.</p>
-  <p> <a href="/#learn-the-fundamentals-and-principles-behind-accessible-design">How do I get started?</a></p>
+    <img src="/public/11-characters.svg" alt="The phrase '11 characters'. Arrows are pointing to the first letter c and the letter t in the word 'accessibility' to show how the numeronym is formed.">
+    <p>The A11Y Project is a community-driven effort to make digital accessibility easier.</p>
+    <p> <a href="/#learn-the-fundamentals-and-principles-behind-accessible-design">How do I get started?</a></p>
   <h2>Table of Contents</h2>
   <ol>
     <li><a href="/#learn-the-fundamentals-and-principles-behind-accessible-design">Build basics</a></li>
@@ -40,11 +37,90 @@
     <li><a href="/#explore-resources">Explore resources</a></li>
   </ol>
   <h2 id="learn-the-fundamentals-and-principles-behind-accessible-design">Learn the fundamentals and principles behind accessible design</h2>
-  <img src="/public/the-bootcampers-guide-to-web-accessibility.jpg" alt="" width="500">
-  <p>Lindser Kopacz</p>
+   <img src="/public/the-bootcampers-guide-to-web-accessibility.jpg" alt="" width="500">
+    <p>Lindser Kopacz</p>
   <h3>The Bootcamper's Guide to Web Accessibility</h3>
-  <p>This book is geared towards bootcamp grads and self-guided front end web developers that explains the crucial takeaways of accessibility standards and makes them less intimidating.</p>
-  <p><a href="/resources/the-bootcampers-guide-to-web-accessibility/"> Learn more about this book</a>
-  </p>
+    <p>This book is geared towards bootcamp grads and self-guided front end web developers that explains the crucial takeaways of accessibility standards and makes them less intimidating.</p>
+    <p><a href="/resources/the-bootcampers-guide-to-web-accessibility/"> Learn more about this book</a>
+    </p>
+    <img src="https://www.a11yproject.com/img/resources/introduction-to-web-accessibility.jpg" alt="" width="500">
+    <p>Michele Williams</p>
+  <h3>Introduction to Web Accessibility</h3>
+    <p>Understanding how people use their computing devices is vital to understanding the diversity of disability in technology. In this video, Michele explains what “making technology accessible” means.</p>
+    <p><a href="/resources/introduction-to-web-accessibility/">Learn more about this video</a></p>
+  <h2>Conduct an accessibility audit</h2>
+    <p>This checklist uses the The Web Content Accessibility Guidelines (WCAG) as a reference point. This checklist targets many, but not all level A and AA concerns.</p>
+    <p><a href="/checklist/">Review the checklist</a></p>
+
+    <p>Josh Kim</p>
+    <p>Researcher, CPWA</p>
+  <h2>Meer the community</h2>
+    <p>Josh is a researcher who believes in including disabled people from the start, rather than remediating solutions after the fact.</p>
+    <p><a href="/spotlight/josh-kim">Meer Josh</a></p>
+  <h2>Explore resources</h2>
+    <p>Tools, books, videos, podcasts, newsletters, even professional help! A lot of people have made a lot of great things to help you out. We collect them to help you discover and explore.</p>
+    <p><a href="/resources/">See all resources</a></p>
+  <h2>Recent posts</h2>
+  <ul>
+    <li><a href="/posts/how-to-accessible-heading-structure/">How-to: Accessible heading structure</a></li>
+    <li><a href="/posts/lets-say-the-word-disability/">Experience: Disability: let's say the word</a></li>
+    <li><a href="/posts/how-i-deal-with-colorblindness-as-a-digital-product-designer/">Experience: How I deal with colorblindness as a digital product designer</a></li>
+  </ul>
+    <a href="https://www.invisionapp.com/"><img src="https://www.a11yproject.com/img/sponsors/invision-design-forward-fund.svg" alt=""></a> 
+    <a href="https://gomakethings.com/"><img src="https://www.a11yproject.com/img/sponsors/go-make-things.svg" alt=""></a>
+    <a href="https://assistivlabs.com/?utm_source=the_a11y_project&utm_medium=sponsored_ad"><img src="https://www.a11yproject.com/img/sponsors/assistiv-labs.svg" alt=""></a>
+    <a href="https://makeitfable.com/?utm_source=partnerships&utm_medium=website&utm_campaign=a11yproject"><img src="https://www.a11yproject.com/img/sponsors/fable.png" alt=""></a>
+    <a href="https://www.a11y-collective.com/?utm_medium=website&utm_source=a11y_project&utm_campaign=banner"><img src="https://www.a11yproject.com/img/sponsors/a11y-collective.svg" alt=""></a>
+    <a href="https://beinclusive.app/?mtm_campaign=Sponsorship&mtm_kwd=A11yProject"><img src="https://www.a11yproject.com/img/sponsors/be-inclusive.svg" alt=""></a>
+    <a href="https://www.a11yproject.com/sponsorship/"><img src="https://www.a11yproject.com/img/sponsors/sponsor-the-a11y-project.svg" alt=""></a>
+  <h2>Features</h2>
+  <ul>
+    <li><a href="/posts/">Posts</a></li>
+    <li><a href="/checklist/">Checklist</a></li>
+    <li><a href="https://www.a11yproject.com/resources/">Resources</a></li>
+    <li><a href="https://www.a11yproject.com/about/">About</a></li>
+    <li><a href="https://www.a11yproject.com/contribute/">Contribute</a></li>
+  </ul>
+  <h2>Project</h2>
+  <ul>
+    <li><a href="/values/">Values</a>
+      <li><a href="/team/">Team</a></li>
+      <li><a href="/authors/">Authors</a></li>
+      <li><a href="/announcements/">Annoucements</a></li>
+      <li><a href="/spotlight/">Spotlight</a></li>
+  </ul>
+  <h2>Site</h2>
+  <ul>
+    <li><a href="/code-of-conduct/">Code of Conduct</a></li>
+    <li><a href="/accessibility-statement/">Accessibility Statement</a></li>
+    <li><a href="/contributing-guidelines/">Contributing Guidelines</a></li>
+    <li><a href="/content-style-guide/">Content Style Guide</a></li>
+    <li><a href="/privacy-and-security/">Privacy and Security</a></li>
+  </ul>
+  <h2>Social</h2>
+  <ul>
+    <li><a href="https://www.a11yproject.com/contact/">Contact</a></li>
+    <li><a href="https://twitter.com/A11YProject">Twitter</a></li>
+    <li><a href="https://www.linkedin.com/company/the-a11y-project/">LinkedIn</a></li>
+    <li><a href="https://www.a11yproject.com/newsletter/">Newsletter</a></li>
+    <li><a href="https://www.a11yproject.com/feed/feed.xml">RSS</a></li>
+  </ul>
+  <h2>Support</h2>
+  <ul>
+    <li><a href="https://www.a11yproject.com/sponsorship/">Sponsorship</a></li>
+    <li><a href="https://opencollective.com/the-a11y-project">Open Collective</a></li>
+    <li><a href="https://www.a11yproject.com/write-for-us/">Write for Us</a></li>
+    <li><a href="https://github.com/a11yproject/a11yproject.com/issues?q=is%3Aissue+is%3Aopen+label%3A%22Good+First+Issue%22">Good First Issues</a></li>
+    <li><a href="https://github.com/a11yproject/a11yproject.com/projects/1">Project Roadmap</a></li>
+  </ul>
+    <p>Accessibility helps everyone.</p>
+    <p>© 2013–2022 The Accessibility Project. <a href="https://www.apache.org/licenses/LICENSE-2.0">APLv2</a>. <a href="https://www.a11yproject.com/sitemap.xml">Sitemap</a>.</p>
+    <p>Powered by <a href="https://www.11ty.io/">Eleventy</a>, <a href="https://www.netlify.com/">Netlify</a>, and <a href="https://github.com/a11yproject/a11yproject.com">GitHub</a>.</p>
+    <a href="https://www.a11yproject.com/#header">Back to top</a>
+  
+    <p>Accessibility helps everyone.</p>
+    <p>© 2013–2022 The Accessibility Project. <a href="https://www.apache.org/licenses/LICENSE-2.0">APLv2</a>. <a href="https://www.a11yproject.com/sitemap.xml">Sitemap</a>.</p>
+    <p>Powered by <a href="https://www.11ty.io/">Eleventy</a>, <a href="https://www.netlify.com/">Netlify</a>, and <a href="https://github.com/a11yproject/a11yproject.com">GitHub</a>.</p>
+    <a href="https://www.a11yproject.com/#header">Back to top</a>
 </body>
 </html>
