agregue los verdaderos links sec10

--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
     <title>Practical Uses</title>
 </head>
 <body>
-    <a href="/">Episode List</a> <a href="/"> M</a> <a href="/"> Topics List</a>
+    <a href="https://moderncss.dev/">Episode List</a> <a href="https://moderncss.dev/"> M</a> <a href="https://moderncss.dev/topics/"> Topics List</a>
     <h1>Practical Uses of CSS Math Functions: calc, clamp, min, max</h1>
     <p>Posted on: Aug 15, 2021 Written by Stephanie Eckles<a href="https://twitter.com/5t3ph/">_</a></p>
     <img src="https://d33wubrfki0l68.cloudfront.net/4ddbbe434dc362c6c06f912339d496bc33a25df3/0ad60/img/avatars/steph.jpg" alt="" width="100">
