--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,13 @@
 <body>
     <a href="https://moderncss.dev/">Episode List</a> <a href="https://moderncss.dev/"> M</a> <a href="https://moderncss.dev/topics/"> Topics List</a>
     <h1>Practical Uses of CSS Math Functions: calc, clamp, min, max</h1>
-    <p>Posted on: Aug 15, 2021 Written by Stephanie Eckles<a href="https://twitter.com/5t3ph/">_</a></p>
+    <p>
+        <em>Posted on</em>: Aug 15, 2021 <span class="byline" data-byline="">Written by Stephanie Eckles</span>
+        <a class="button button-icon" href="htpps://twitter.com/5t3ph/" 
+        aria-label="Twitter">
+        <svg aria-hidden="true" focusable="false" width="24" height="24" fill="currentColor" class="button__icon"><use href="#icon-twitter"></use></svg></a>
+        <use href="#icon-twitter"></use>
+    </p>
     <img src="https://d33wubrfki0l68.cloudfront.net/4ddbbe434dc362c6c06f912339d496bc33a25df3/0ad60/img/avatars/steph.jpg" alt="" width="100">
     <p>This is episode #28 in a series examining modern CSS solutions to problems Stephanie Eckles has been solving over the last 14+ years as a front-end dev.</p>
     
