practical uses revision ejercicio

--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,21 @@
         <use href="#icon-twitter"></use>
     </p>
     <img src="https://d33wubrfki0l68.cloudfront.net/4ddbbe434dc362c6c06f912339d496bc33a25df3/0ad60/img/avatars/steph.jpg" alt="" width="100">
-    <p>This is episode #28 in a series examining modern CSS solutions to problems Stephanie Eckles has been solving over the last 14+ years as a front-end dev.</p>
-    
+    <p>This is <strong>episode #28</strong> in a series examining modern CSS solutions to problems Stephanie Eckles has been solving over the last 14+ years as a front-end dev.</p>
+    <details id="toc" open="">
+        <summary>
+          ::marker
+            Table of Contents
+        </summary>
+    <nav class="toc">
+        <ol>
+            <li><a href="#calc">calc()</a></li>
+            <li><a href="#clamp">camlp()</a></li>
+            <li><a href="#mic">mic()</a></li>
+            <li><a href="#max">max()</a></li>
+            <li><a href="#putting-it-all-together">Putting It All Together</a></li>
+        </ol>
+    </nav>
+    </details>
 </body>
 </html>
