registro de usuario

--- a/formulario-2/index.html
+++ b/formulario-2/index.html
@@ -10,8 +10,36 @@
   <header>
     <h1>Registro de Usuario</h1>
   </header>
-  <main>
- <textarea name="" id="" cols="30" rows="10"></textarea>
-  </main>
+  <fieldset>
+    <div>
+      <label for="nombre">Nombre</label>
+      <input type="text">
+    </div>
+    <div>
+      <label for="apellido">Apellido</label>
+      <input type="text">
+    </div>
+    <div>
+      <label for="email">E-mail</label>
+      <input type="email">
+    </div>
+    <div>
+      <label for="fecha_nacimiento">Fecha de Nacimiento</label>
+      <input type="date">
+    </div>
+    <form>
+      <div>
+        <label for="tiene-hijos">Tiene hijos?</label>
+        <label for="tiene-hijos">Sí</label>
+        <input type="radio" id="tiene-hijos" name="si">
+        <label for="tiene-hijos">No</label>
+        <input type="radio" name="no" id="tiene-hijos">
+      </div>
+    </form>
+    <div>
+      <label for=""></label>
+      <input type="text">
+    </div>
+  </fieldset>
 </body>
 </html>
