--- a/formulario-2/index.html
+++ b/formulario-2/index.html
@@ -12,34 +12,20 @@
   </header>
   <fieldset>
     <div>
-      <label for="nombre">Nombre</label>
-      <input type="text">
-    </div>
-    <div>
-      <label for="apellido">Apellido</label>
-      <input type="text">
+      <label for="name">Nombre de usuario</label>
+      <input type="text" id="name" name="name" required maxlenght="10">
     </div>
     <div>
       <label for="email">E-mail</label>
       <input type="email">
     </div>
     <div>
-      <label for="fecha_nacimiento">Fecha de Nacimiento</label>
-      <input type="date">
+      <label for="password">Contraseña</label>
+      <input type="text" id="password">
     </div>
-    <form>
-      <div>
-        <label for="tiene-hijos">Tiene hijos?</label>
-        <label for="tiene-hijos">Sí</label>
-        <input type="radio" id="tiene-hijos" name="si">
-        <label for="tiene-hijos">No</label>
-        <input type="radio" name="no" id="tiene-hijos">
-      </div>
-    </form>
-    <div>
-      <label for=""></label>
-      <input type="text">
-    </div>
+  </fieldset>
+  <fieldset>
+
   </fieldset>
 </body>
 </html>
