--- a/learning-css/index.html
+++ b/learning-css/index.html
@@ -17,7 +17,7 @@
         est minus soluta, facere voluptas, 
         magnam fugit!
     </p>
-    <p id="texto">
+    <p id="texto2">
         Lorem ipsum dolor sit amet consectetur
         adipisicing elit. Officiis soluta 
         nihil doloribus. Sint repellat omnis 
