ganga record pagina

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <li><a href="/a11y-project/">A11Y PROJECT</a></li>
     <li><a href="/modern-css/">Modern CSS</a></li>
     <li><a href="/learning-css/">learning CSS</a></li>
+    <li><a href="/ganga-records/">Ganga Records</a></li>
   </ul>
   </body>
 </html>
