--- a/ganga-records/index.html
+++ b/ganga-records/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Ganga Records®</title>
 </head>
 <body>
@@ -15,7 +16,6 @@
                 <a href="">Nuestras redes</a>
                 <a href="">Proximos eventos</a>
             </nav>
-
         </div>
     </header>
     <section id="hero">
@@ -24,7 +24,8 @@
     </section>
     
     <section id="somos-ganga">
-        <div class="img-container">
+        <div class="conteiner">
+            <div class="img-container"></div>
             <h2>Somos la Ganga Records</h2>
             <p> 
                 Lorem ipsum dolor sit amet consectetur 
@@ -39,8 +40,8 @@
     <section id="nuestras-redes">
         <div class="container">
             <h2>Nuestras Redes</h2>
-            <div class="carta">
-                <h3>Ver Perfil</h3>
+                <div class="carta"></div>
+            <h3>Ver Perfil</h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur 
                     adipisicing elit. Aut dolores iure quisquam,
@@ -49,10 +50,11 @@
                     vitae pariatur! Odit commodi quos pariatur 
                     rem!
                 </p>
+            <form action="https://www.instagram.com/ganga.records/">
                 <button>Ver Perfil</button>
-            </div>
-            <div class="carta">
-                <h3>Ver Perfil</h3>
+            </form>
+                <div class="carta"></div>
+            <h3>Ver Perfil</h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur 
                     adipisicing elit. Aut dolores iure quisquam,
@@ -61,8 +63,9 @@
                     vitae pariatur! Odit commodi quos pariatur 
                     rem!
                 </p>
+            <form action="https://www.instagram.com/kaos.rave/">
                 <button>Ver Perfil</button>
-            </div>
+            </form>
         </div>
     </section>
 
@@ -76,7 +79,9 @@
     
     <section id="contactanos">
         <h2>Contactanos por Whatsapp</h2>
-        <button>Contactar</button>
+        <form action="https://www.newgrounds.com/portal/view/254456">
+            <button>Contactar</button>
+        </form>
     </section>
 
     <footer>
