arreglos div dentro de container

--- a/ganga-records/index.html
+++ b/ganga-records/index.html
@@ -39,9 +39,9 @@
     
     <section id="nuestras-redes">
         <div class="container">
-            <h2>Nuestras Redes</h2>
-                <div class="carta"></div>
-            <h3>Ver Perfil</h3>
+                <h2>Nuestras Redes</h2>
+            <div class="carta">
+                <h3>Ver Perfil</h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur 
                     adipisicing elit. Aut dolores iure quisquam,
@@ -50,11 +50,12 @@
                     vitae pariatur! Odit commodi quos pariatur 
                     rem!
                 </p>
-            <form action="https://www.instagram.com/ganga.records/">
+                <form action="https://www.instagram.com/ganga.records/">
                 <button>Ver Perfil</button>
-            </form>
-                <div class="carta"></div>
-            <h3>Ver Perfil</h3>
+                </form>
+            </div>
+            <div class="carta">
+                <h3>Ver Perfil</h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur 
                     adipisicing elit. Aut dolores iure quisquam,
@@ -62,10 +63,11 @@
                     obcaecati error voluptas, sed sapiente dicta
                     vitae pariatur! Odit commodi quos pariatur 
                     rem!
-                </p>
+                </p>   
             <form action="https://www.instagram.com/kaos.rave/">
                 <button>Ver Perfil</button>
             </form>
+            </div>
         </div>
     </section>
 
