--- a/ganga-records/index.html
+++ b/ganga-records/index.html
@@ -72,18 +72,22 @@
     </section>
 
     <section id="eventos-volumenes">
-        <ul>
-            <li>🌪Ganga record</li>
-            <li>🌪Rancho relaxo</li>
-            <li>🌪Kaos Rave</li>
-        </ul>
+        <div class="container">    
+            <ul>
+                <li>🌪Ganga record</li>
+                <li>🌪Rancho relaxo</li>
+                <li>🌪Kaos Rave</li>
+            </ul>
+        </div>
     </section>
     
     <section id="contactanos">
-        <h2>Contactanos por Whatsapp</h2>
-        <form action="https://www.newgrounds.com/portal/view/254456">
-            <button>Contactar</button>
-        </form>
+        <div class="container">
+            <h2>Contactanos por Whatsapp</h2>
+            <form action="https://www.newgrounds.com/portal/view/254456">
+                <button>Contactar</button>
+            </form>
+        </div>
     </section>
 
     <footer>
