Avanzando en Bootcamp HTMLyCSS

--- a/Bootcamp/04Hojas de estilo/intro-estilos.html
+++ b/Bootcamp/04Hojas de estilo/intro-estilos.html
@@ -33,5 +33,16 @@
         <p>Hola</p>
         <h1>chau loco suerte</h1>
     </div>
+    <h3>Espacios y tamaños</h3>
+    <div class="ancho">
+        <h1>Cambiar la anchura</h1>
+    </div>
+    <div class="alto">
+        <h1>Cambiar la altura</h1>
+    </div>
+    <div class="tarjeta">
+        <h1 class="encabezado">Título de tarjeta</h1>
+        <p class="descripcion">Esta es la descripción de la tarjeta</p>
+    </div>
 </body>
 </html>
